--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ html {
 
 header {
   width: 100%;
-  height: 4rem;
+  height: 4.5rem;
   color: white;
   display: flex;
   align-items: center;
@@ -46,4 +46,40 @@ nav div {
   color: rgb(0, 0, 0);
   background-color: white;
   border-radius: 1.2rem;
+}
+
+main {
+  margin-top: 10%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 2rem;
+}
+
+.portrait {
+  grid-area: 1 / 2 / 1 / 3;
+  border-radius: 5rem;
+}
+
+.about-me {
+  height: 50%;
+  grid-area: 1 / 7 / 1 / 10;
+  align-self: end;
+}
+
+h2 {
+  text-align: center;
+  font-size: 2.1rem;
+  margin-bottom: 0.5rem;
+}
+
+.about-me article {
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
+
+  padding: 1.5rem;
+  text-align: center;
+  line-height: 1.5;
+
+  border-radius: 4rem;
 }
