--- a/style.css
+++ b/style.css
@@ -53,12 +53,14 @@ main {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  gap: 2rem;
+  grid-auto-rows: 60%;
+  gap: 1.5rem;
 }
 
 .portrait {
-  grid-area: 1 / 2 / 1 / 3;
-  border-radius: 5rem;
+  width: 100%;
+  grid-area: 1 / 2 / 1 / 4;
+  border-radius: 20%;
 }
 
 .about-me {
@@ -82,4 +84,24 @@ h2 {
   line-height: 1.5;
 
   border-radius: 4rem;
+}
+
+.skills {
+  display: flex;
+  justify-content: center;
+
+  grid-area: 2 / 3 / 2 / 6;
+  align-self: end;
+
+  width: 11rem;
+  height: 11rem;
+
+  background-color: rgb(0, 0, 0);
+
+  border-radius: 50%;
+}
+
+.skills h2 {
+  align-self: center;
+  color: rgb(255, 255, 255);
 }
