--- a/style.css
+++ b/style.css
@@ -102,6 +102,53 @@ h2 {
 }
 
 .skills h2 {
-  align-self: center;
+  position: relative;
+  left: 150px;
+  top: 65px;
   color: rgb(255, 255, 255);
+}
+
+i {
+  position: relative;
+  font-size: 2.5rem;
+}
+
+.fa-html5 {
+  top: -20px;
+  left: 0px;
+}
+
+.fa-css3-alt {
+  top: -60px;
+  left: 60px;
+}
+
+.fa-js-square {
+  top: -20px;
+  left: 130px;
+}
+
+.fa-python {
+  top: 65px;
+  left: -130px;
+}
+
+.fa-npm {
+  top: 65px;
+  left: 90px;
+}
+
+.fa-git {
+  top: 170px;
+  left: -180px;
+}
+
+.fa-github {
+  top: 160px;
+  left: -20px;
+}
+
+.fa-node {
+  top: 200px;
+  left: -160px;
 }
