--- a/style.css
+++ b/style.css
@@ -99,6 +99,8 @@ h2 {
   background-color: rgb(0, 0, 0);
 
   border-radius: 50%;
+
+  cursor: pointer;
 }
 
 .skills h2 {
@@ -108,9 +110,14 @@ h2 {
   color: rgb(255, 255, 255);
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 i {
   position: relative;
   font-size: 2.5rem;
+  transition: top 500ms, left 500ms;
 }
 
 .fa-html5 {
