--- a/style.css
+++ b/style.css
@@ -115,9 +115,33 @@ h2 {
 }
 
 i {
+  display: inline-block;
   position: relative;
   font-size: 2.5rem;
   transition: top 500ms, left 500ms;
+}
+
+.tooltip {
+  font-size: 1rem;
+  visibility: hidden;
+  width: 5rem;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -2.5rem;
+
+  z-index: 1;
+  opacity: 0.5;
+}
+
+i:hover .tooltip {
+  visibility: visible;
 }
 
 .fa-html5 {
