--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
 .header-background {
   width: 100%;
   position: absolute;
+  top: -5.5rem;
   z-index: -1;
 }
 
@@ -194,4 +195,24 @@ i:hover .tooltip {
   border: 5px solid rgb(0, 0, 0);
   width: 100%;
   height: 50%;
+
+  cursor: pointer;
 }
+
+@media only screen and (max-width: 1400px) {
+  .header-background {
+    top: -3rem;
+  }
+  nav {
+    flex: 2 5 20%;
+  }
+}
+
+@media only screen and (max-width: 1030px) {
+  .header-background {
+    top: -2rem;
+  }
+  nav {
+    flex: 2 5 20%;
+  }
+} ;
